tools/syntax_stubs.h

int printf(const char *fmt, ...);
int snprintf(char *buf, unsigned long n, const char *fmt, ...);
void free(void *p);
void *memcpy(void *d, const void *s, unsigned long n);
void *memset(void *s, int c, unsigned long n);
int strcmp(const char *a, const char *b);
unsigned long strlen(const char *s);
typedef int64_t off_t;
typedef void FILE;
#define _(s) (s)
#define COLORSPEC_TYPE_NONE 0
#define BG_SHIFT 11
#define FG_SHIFT 21
typedef struct color_set COLORSET;
typedef struct color_scheme SCHEME;
typedef struct Hash HASH;
typedef struct jfile JFILE;
typedef struct point P;
typedef struct bw BW;
struct Hash {
	ptrdiff_t len;
	HENTRY **tab;
	ptrdiff_t nentries;
};
struct jfile { char _pad[16]; };
struct color_def {
	const char *name;
	struct color_ref *refs;
	struct color_def *next;
	struct color_spec spec;
	struct color_spec orig;
	int visited;
};
struct color_set {
	COLORSET *next;
	int colors;
	HASH *syntax;
	int *palette;
	struct color_def *alldefs;
	struct color_spec *builtins;
	struct color_spec termcolors[16];
};
struct Rtree { char _pad[248]; };
struct high_cmd {
	unsigned flags;
	ptrdiff_t recolor;
	struct high_state *new_state;
	ZHASH *keywords;
	struct high_cmd *delim;
	struct high_syntax *call;
};
struct high_state {
	ptrdiff_t no;
	int name;
	int color;
	struct color_def *colorp;
	struct Rtree rtree;
	struct high_cmd *dflt;
	struct high_cmd *same_delim;
	struct high_cmd *delim;
};
struct high_param {
	struct high_param *next;
	char *name;
};
struct high_frame {
	struct high_frame *parent;
	struct high_frame *child;
	struct high_frame *sibling;
	struct high_syntax *syntax;
	struct high_state *return_state;
};
struct high_delim_frame {
	struct high_delim_frame *parent;
	struct high_delim_frame *child;
	struct high_delim_frame *sibling;
	const int *saved_s;
};
struct high_syntax {
	struct high_syntax *next;
	char *name;
	char *subr;
	struct high_param *params;
	struct high_state **states;
	HASH *ht_states;
	ptrdiff_t nstates;
	ptrdiff_t szstates;
	struct color_def *color;
	struct high_cmd default_cmd;
	struct high_frame *stack_base;
	struct high_delim_frame *delim_stack_base;
};
struct point {
	void *link_next;
	void *link_prev;
	B *b;
	char _pad[112 - 24];
};
struct bw {
	char _pad0[24];
	P *cursor;
	char _pad1[488 - 32];
};
extern char i_msg[];
const char *my_gettext(const char *s);
void internal_msg(const char *s);
void setlogerrs(void);
void *joe_malloc(ptrdiff_t n);
void *joe_calloc(ptrdiff_t n, ptrdiff_t sz);
void joe_free(void *p);
char *zdup(const char *s);
void vsrm(char *v);
HASH *htmk(ptrdiff_t len);
void *htadd(HASH *ht, const char *name, void *val);
void *htfind(HASH *ht, const char *name);
const char *atom_add(const char *name);
char *jfgets(char *buf, int len, JFILE *f);
int jfclose(JFILE *f);
char *open_config_file(JFILE **result, const char *prefix, const char *name, const char *suffix);
int parse_ws(const char **p, int cmt);
int parse_ident(const char **p, char *buf, ptrdiff_t len);
int parse_char(const char **p, char c);
P *binss(P *p, const char *s);
P *pnextl(P *p);