tools/macro_stubs.h

int fprintf(void *stream, const char *fmt, ...);
char *fgets(char *s, int n, void *stream);
char *getenv(const char *name);
#define sz(a) (a), slen(a)
struct p;
typedef struct p P;
struct b;
typedef struct bw BW;
struct screen {
	char _pad0[24];
	W *curwin;
	char _pad1[16];
};
typedef struct screen Screen;
int parse_int(const char **p, int *buf);
ptrdiff_t parse_string(const char **p, char *buf, ptrdiff_t len);
void emit_string(FILE *f, const char *s, ptrdiff_t len);
P *p_goto_eol(P *p);
extern Screen *maint;