src/colors.zig


pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn fprintf(f: ?*anyopaque, fmt: [*c]const u8, ...) c_int;
pub extern fn fgets(s: [*c]u8, n: c_int, stream: ?*anyopaque) [*c]u8;
pub extern fn getenv(name: [*c]const u8) [*c]u8;
pub extern fn free(p: ?*anyopaque) void;
pub extern fn memcpy(d: ?*anyopaque, s: ?*const anyopaque, n: c_ulong) ?*anyopaque;
pub extern fn memset(s: ?*anyopaque, c: c_int, n: c_ulong) ?*anyopaque;
pub extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn strlen(s: [*c]const u8) c_ulong;
pub const off_t = i64;
pub const FILE = anyopaque;
pub extern var ITEM: ?*anyopaque;
pub extern var QUEUE: ?*anyopaque;
pub const COLORSET = struct_color_set;
pub const struct_hash = extern struct {
    _pad: [24]u8 = std.mem.zeroes([24]u8),
};
pub const HASH = struct_hash;
pub const struct_color_ref = extern struct {
    name: [*c]const u8 = null,
    next: [*c]struct_color_ref = null,
};
pub const struct_color_spec = extern struct {
    @"type": c_int = 0,
    atr: c_int = 0,
    mask: c_int = 0,
    gui_fg: c_int = 0,
    gui_bg: c_int = 0,
};
pub const struct_color_def = extern struct {
    name: [*c]const u8 = null,
    refs: [*c]struct_color_ref = null,
    next: [*c]struct_color_def = null,
    spec: struct_color_spec = std.mem.zeroes(struct_color_spec),
    orig: struct_color_spec = std.mem.zeroes(struct_color_spec),
    visited: c_int = 0,
};
pub const struct_color_set = extern struct {
    next: [*c]COLORSET = null,
    colors: c_int = 0,
    syntax: [*c]HASH = null,
    palette: [*c]c_int = null,
    alldefs: [*c]struct_color_def = null,
    builtins: [*c]struct_color_spec = null,
    termcolors: [16]struct_color_spec = std.mem.zeroes([16]struct_color_spec),
};
pub const SCHEME = struct_color_scheme;
const struct_unnamed_1 = extern struct {
    next: [*c]SCHEME = null,
    prev: [*c]SCHEME = null,
};
pub const struct_color_scheme = extern struct {
    link: struct_unnamed_1 = std.mem.zeroes(struct_unnamed_1),
    name: [*c]const u8 = null,
    sets: [*c]struct_color_set = null,
};
pub const struct_jfile = extern struct {
    _pad: [16]u8 = std.mem.zeroes([16]u8),
};
pub const JFILE = struct_jfile;
pub const struct_point = extern struct {
    _pad: [112]u8 = std.mem.zeroes([112]u8),
};
pub const P = struct_point;
pub const struct_bw = extern struct {
    _pad0: [24]u8 = std.mem.zeroes([24]u8),
    cursor: [*c]P = null,
    _pad1: [456]u8 = std.mem.zeroes([456]u8),
};
pub const BW = struct_bw;
pub const struct_scrn = extern struct {
    _pad0: [232]u8 = std.mem.zeroes([232]u8),
    Co: c_int = 0,
    _pad1: [468]u8 = std.mem.zeroes([468]u8),
    assume_256: c_int = 0,
    truecolor: c_int = 0,
    _pad2: [128]u8 = std.mem.zeroes([128]u8),
};
pub const SCRN = struct_scrn;
pub const struct_screen = extern struct {
    t: [*c]SCRN = null,
    _pad: [40]u8 = std.mem.zeroes([40]u8),
};
pub const Screen = struct_screen;
pub const struct_high_state = extern struct {
    _pad0: [12]u8 = std.mem.zeroes([12]u8),
    color: c_int = 0,
    colorp: [*c]struct_color_def = null,
    _pad1: [272]u8 = std.mem.zeroes([272]u8),
};
pub const struct_high_syntax = extern struct {
    next: [*c]struct_high_syntax = null,
    name: [*c]u8 = null,
    _pad0: [16]u8 = std.mem.zeroes([16]u8),
    states: [*c][*c]struct_high_state = null,
    _pad1: [8]u8 = std.mem.zeroes([8]u8),
    nstates: ptrdiff_t = 0,
    _pad2: [8]u8 = std.mem.zeroes([8]u8),
    color: [*c]struct_color_def = null,
    _pad3: [64]u8 = std.mem.zeroes([64]u8),
};
pub const high_syntax = struct_high_syntax;
pub const high_state = struct_high_state;
pub extern var bg_text: c_int;
pub extern var bg_linum: c_int;
pub extern var bg_curlin: c_int;
pub extern var curlinmask: c_int;
pub extern var bg_curlinum: c_int;
pub extern var selectatr: c_int;
pub extern var selectmask: c_int;
pub extern var bg_help: c_int;
pub extern var bg_stalin: c_int;
pub extern var bg_menu: c_int;
pub extern var bg_menusel: c_int;
pub extern var bg_menumask: c_int;
pub extern var bg_prompt: c_int;
pub extern var bg_msg: c_int;
pub extern var vwsatr: c_int;
pub extern var vwsmask: c_int;
pub extern var maint: [*c]Screen;
pub extern var syntax_list: [*c]struct_high_syntax;
pub const i_msg: [*c]u8 = @extern([*c]u8, .{
    .name = "i_msg",
});
pub extern fn my_gettext(s: [*c]const u8) [*c]const u8;
pub extern fn internal_msg(s: [*c]const u8) void;
pub extern fn setlogerrs() void;
pub extern fn joe_malloc(n: ptrdiff_t) ?*anyopaque;
pub extern fn joe_calloc(n: ptrdiff_t, sz: ptrdiff_t) ?*anyopaque;
pub extern fn joe_free(p: ?*anyopaque) void;
pub extern fn zdup(s: [*c]const u8) [*c]u8;
pub extern fn zicmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn zhtoi(s: [*c]const u8) c_int;
pub extern fn meta_color(s: [*c]const u8) c_int;
pub extern fn htmk(len: ptrdiff_t) [*c]HASH;
pub extern fn htadd(ht: [*c]HASH, name: [*c]const u8, val: ?*anyopaque) ?*anyopaque;
pub extern fn htfind(ht: [*c]HASH, name: [*c]const u8) ?*anyopaque;
pub extern fn atom_add(name: [*c]const u8) [*c]const u8;
pub extern fn jfgets(buf: [*c]u8, len: c_int, f: [*c]JFILE) [*c]u8;
pub extern fn jfclose(f: [*c]JFILE) c_int;
pub extern fn open_config_file(result: [*c][*c]JFILE, prefix: [*c]const u8, name: [*c]const u8, suffix: [*c]const u8) [*c]u8;
pub extern fn find_configs(ary: [*c][*c]u8, prefix: [*c]const u8, extension: [*c]const u8) [*c][*c]u8;
pub extern fn setextpal(t: [*c]SCRN, palette: [*c]c_int) void;
pub extern fn emit_string(f: ?*FILE, s: [*c]const u8, len: ptrdiff_t) void;
pub extern fn jsort(base: ?*anyopaque, num: ptrdiff_t, size: ptrdiff_t, compar: ?*const fn (a: ?*const anyopaque, b: ?*const anyopaque) callconv(.c) c_int) void;
pub extern fn parse_ws(p: [*c][*c]const u8, cmt: c_int) c_int;
pub extern fn parse_ident(p: [*c][*c]const u8, buf: [*c]u8, len: ptrdiff_t) c_int;
pub extern fn parse_char(p: [*c][*c]const u8, c: u8) c_int;
pub extern fn parse_int(p: [*c][*c]const u8, buf: [*c]c_int) c_int;
pub extern fn parse_string(p: [*c][*c]const u8, buf: [*c]u8, len: ptrdiff_t) ptrdiff_t;
pub extern fn vsncpy(vary: [*c]u8, pos: ptrdiff_t, array: [*c]const u8, len: ptrdiff_t) [*c]u8;
pub extern fn vsrm(v: [*c]u8) void;
pub extern fn vstrunc(vary: [*c]u8, len: ptrdiff_t) [*c]u8;
pub extern fn vsensure(vary: [*c]u8, len: ptrdiff_t) [*c]u8;
pub extern fn vsadd(vary: [*c]u8, element: u8) [*c]u8;
pub extern fn binss(p: [*c]P, s: [*c]const u8) [*c]P;
pub extern fn pnextl(p: [*c]P) [*c]P;
pub extern fn p_goto_eol(p: [*c]P) [*c]P;
pub export fn parse_color_spec(arg_p: [*c][*c]const u8, arg_dest: [*c]struct_color_spec) c_int {
    var p = arg_p;
    _ = &p;
    var dest = arg_dest;
    _ = &dest;
    var buf: [128]u8 = undefined;
    _ = &buf;
    var fg: c_int = 1;
    _ = &fg;
    var bg: c_int = 0;
    _ = &bg;
    var fg_read: c_int = 0;
    _ = &fg_read;
    var bg_read: c_int = 0;
    _ = &bg_read;
    var color: c_int = undefined;
    _ = &color;
    dest.*.@"type" = COLORSPEC_TYPE_NONE;
    dest.*.atr = 0;
    dest.*.mask = 0;
    dest.*.gui_fg = 0;
    dest.*.gui_bg = 0;
    while (true) {
        if (!(parse_ws(p, '#') != 0)) {
            return 0;
        }
        if (!(parse_char(p, '/') != 0)) {
            if (!(fg != 0)) {
                return 1;
            }
            fg = 0;
            bg = 1;
        } else if (!(parse_char(p, '$') != 0)) {
            var i: c_int = undefined;
            _ = &i;
            if ((dest.*.@"type" != COLORSPEC_TYPE_NONE) and (dest.*.@"type" != COLORSPEC_TYPE_GUI)) {
                return 1;
            }
            dest.*.@"type" = COLORSPEC_TYPE_GUI;
            i = 0;
            while ((@as(c_int, p.*.*) != 0) and ((((@as(c_int, p.*.*) >= @as(c_int, 'a')) and (@as(c_int, p.*.*) <= @as(c_int, 'f'))) or ((@as(c_int, p.*.*) >= @as(c_int, '0')) and (@as(c_int, p.*.*) <= @as(c_int, '9')))) or ((@as(c_int, p.*.*) >= @as(c_int, 'A')) and (@as(c_int, p.*.*) <= @as(c_int, 'F'))))) {
                buf[
                    @bitCast(@as(isize, @intCast(blk: {
                        const ref = &i;
                        const tmp = ref.*;
                        ref.* += 1;
                        break :blk tmp;
                    })))
                ] = (blk: {
                    const ref = &p.*;
                    const tmp = ref.*;
                    ref.* += 1;
                    break :blk tmp;
                }).*;
            }
            buf[@as(usize, @intCast(i))] = 0;
            color = zhtoi(@ptrCast(@alignCast(&buf)));
            if ((fg != 0) and !(fg_read != 0)) {
                dest.*.gui_fg = color;
                dest.*.mask |= @as(c_int, 1023) << @intCast(FG_SHIFT);
                fg_read = 1;
            } else if ((bg != 0) and !(bg_read != 0)) {
                dest.*.gui_bg = color;
                dest.*.mask |= @as(c_int, 1023) << @intCast(BG_SHIFT);
                bg_read = 1;
            }
        } else if (!(parse_int(p, &color) != 0)) {
            if ((dest.*.@"type" != COLORSPEC_TYPE_NONE) and (dest.*.@"type" != COLORSPEC_TYPE_ATTR)) {
                return 1;
            }
            dest.*.@"type" = COLORSPEC_TYPE_ATTR;
            if ((fg != 0) and !(fg_read != 0)) {
                dest.*.atr |= (color << @intCast(FG_SHIFT)) | (@as(c_int, 256) << @intCast(FG_SHIFT));
                dest.*.mask |= @as(c_int, 1023) << @intCast(FG_SHIFT);
                fg_read = 1;
            } else if ((bg != 0) and !(bg_read != 0)) {
                dest.*.atr |= (color << @intCast(BG_SHIFT)) | (@as(c_int, 256) << @intCast(BG_SHIFT));
                dest.*.mask |= @as(c_int, 1023) << @intCast(BG_SHIFT);
                bg_read = 1;
            } else {
                return 1;
            }
        } else if (!(parse_ident(p, @ptrCast(@alignCast(&buf)), @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(@sizeOf(@TypeOf(buf))))))) != 0)) {
            var dflt: c_int = 0;
            _ = &dflt;
            if (!(strcmp(@ptrCast(@alignCast(&buf)), "default") != 0)) {
                dflt = 1;
                color = 0;
            } else if (!((blk: {
                const tmp = meta_color(@ptrCast(@alignCast(&buf)));
                color = tmp;
                break :blk tmp;
            }) != 0)) {
                return 1;
            }
            if ((color & ((@as(c_int, 1023) << @intCast(FG_SHIFT)) | (@as(c_int, 1023) << @intCast(BG_SHIFT)))) != @as(c_int, 0)) {
                if ((dest.*.@"type" != COLORSPEC_TYPE_NONE) and (dest.*.@"type" != COLORSPEC_TYPE_ATTR)) {
                    return 1;
                }
            }
            if (dest.*.@"type" == COLORSPEC_TYPE_NONE) {
                dest.*.@"type" = COLORSPEC_TYPE_ATTR;
            }
            if (((bg != 0) and !(bg_read != 0)) and (((@as(c_int, 1023) << @intCast(FG_SHIFT)) & color) != 0)) {
                dest.*.atr |= (@as(c_int, 256) << @intCast(BG_SHIFT)) | (((((@as(c_int, 1023) << @intCast(FG_SHIFT)) & color) & ~((@as(c_int, 1023) << @intCast(FG_SHIFT)) | (@as(c_int, 1023) << @intCast(BG_SHIFT)))) | (((((@as(c_int, 1023) << @intCast(FG_SHIFT)) & color) & (@as(c_int, 1023) << @intCast(BG_SHIFT))) >> @intCast(BG_SHIFT)) << @intCast(FG_SHIFT))) | (((((@as(c_int, 1023) << @intCast(FG_SHIFT)) & color) & (@as(c_int, 1023) << @intCast(FG_SHIFT))) >> @intCast(FG_SHIFT)) << @intCast(BG_SHIFT)));
                dest.*.mask |= @as(c_int, 1023) << @intCast(BG_SHIFT);
                bg_read = 1;
            } else if (((fg != 0) and !(fg_read != 0)) and (((@as(c_int, 1023) << @intCast(FG_SHIFT)) & color) != 0)) {
                dest.*.atr |= color | (@as(c_int, 256) << @intCast(FG_SHIFT));
                dest.*.mask |= @as(c_int, 1023) << @intCast(FG_SHIFT);
                fg_read = 1;
            } else if (((bg != 0) and !(bg_read != 0)) and (dflt != 0)) {
                dest.*.mask |= @as(c_int, 1023) << @intCast(BG_SHIFT);
                bg_read = 1;
